--- a/requirements.txt
+++ b/requirements.txt
@@ -142,7 +142,7 @@ PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==0.21.1
 pytz==2024.2
-pywin32==308
+pywin32
 pywinpty==2.0.10
 pyzmq==26.2.0
 regex==2024.4.16
